// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioInput /> expect to render 1`] = `
<div
  styleName="RadioInput"
>
  <input
    checked={false}
    id="category-games"
    name="category"
    onChange={[Function]}
    styleName="RadioInput__Input"
    type="radio"
  />
  <label
    className=""
    htmlFor="category-games"
    styleName="RadioInput__Label"
  >
    label
  </label>
</div>
`;

exports[`<RadioInput /> expect to render when checked 1`] = `
<div
  styleName="RadioInput"
>
  <input
    checked={true}
    id="category-games"
    name="category"
    onChange={[Function]}
    styleName="RadioInput__Input"
    type="radio"
  />
  <label
    className=""
    htmlFor="category-games"
    styleName="RadioInput__Label RadioInput__Label--active"
  >
    label
  </label>
</div>
`;

exports[`<RadioInput /> expect to render with customActiveClassName 1`] = `
<div
  styleName="RadioInput"
>
  <input
    checked={true}
    id="category-games"
    name="category"
    onChange={[Function]}
    styleName="RadioInput__Input"
    type="radio"
  />
  <label
    className="custom-active-class-name"
    htmlFor="category-games"
    styleName="RadioInput__Label RadioInput__Label--active"
  >
    label
  </label>
</div>
`;

exports[`<RadioInput /> expect to render with customClassName 1`] = `
<div
  styleName="RadioInput"
>
  <input
    checked={false}
    id="category-games"
    name="category"
    onChange={[Function]}
    styleName="RadioInput__Input"
    type="radio"
  />
  <label
    className="custom-class-name"
    htmlFor="category-games"
    styleName="RadioInput__Label"
  >
    label
  </label>
</div>
`;
